syntax = "proto3";
option go_package = "github.com/EugeneTsydenov/go-user-service/proto";
package proto;
import "google/protobuf/timestamp.proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc SaveUser(SaveUserRequest) returns (SaveUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {}
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  int64 id = 1;
  string username = 2;
  string avatar = 3;
  google.protobuf.Timestamp created_at = 4;
}

message SaveUserRequest {
  string username = 1;
  string hash_password = 2;
}

message SaveUserResponse {
  int64 id = 1;
  string username = 2;
  string avatar = 3;
  google.protobuf.Timestamp created_at = 4;
}

message UpdateUserRequest {
  int64 id = 1;
  string username = 2;
  string avatar = 3;
}

message UpdateUserResponse {
  int64 id = 1;
  string username = 2;
  string avatar = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message ChangePasswordRequest {
  int64 id = 1;
  string old_password = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  bool success = 1;
}